manifests/was/was-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-deploy
  namespace: was
  labels:
    app: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
      containers:
        - name: was
          image: ealen/echo-server:latest
          ports:
            - containerPort: 8080
