manifests/was/was-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
  namespace: was
  labels:
    app: was
spec:
  type: NodePort
  selector:
    app: was
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
